# co-sci-140

./: .gitignore  LICENSE  README.md
assignments/assignment01/: CMakeLists.txt  JoshuaSaundersAssignment01CoSci140Section15029.cpp  JoshuaSaundersAssignment01CoSci140Section15029.cpp.txt  JoshuaSaundersAssignment01CoSci140Section15029.docx  assignment01.cpp  testStuff.cpp
assignments/assignment02/: CMakeLists.txt  JoshuaSaundersAssignment02CoSci140Section15029.cpp.txt  assignment02.cpp  discussion.html  lastTermQuiz.cpp  testingground.cpp
assignments/assignment03/: CMakeLists.txt  JoshuaSaundersAssignment02CoSci140Section15029.cpp.txt  assignment03.cpp  discussion.html  testingground.cpp
assignments/assignment04/: CMakeLists.txt  JoshuaSaundersAssignment03CoSci140Section15029-Question.cpp.txt  JoshuaSaundersAssignment03CoSci140Section15029-Question.h.txt  Loader.cpp  Loader.h  Question.cpp  Question.h  Quiz.h  assignment04.cpp  discussion.html  playground.cpp  testingGround.cpp
assignments/assignment05/: CMakeLists.txt  FeetInches.cpp  FeetInches.h  FeetInches.h.txt  assignment05.cpp  discussion.html
assignments/assignment06/: BasicShape.h  CMakeLists.txt  Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  discussion.html  shapesTest.cpp
assignments/assignment07/: CMakeLists.txt  discussion.html  question3.cpp  totalTest.cpp
assignments/assignment08/: CMakeLists.txt  IntList.cpp  IntList.h  Node.cpp  Node.h  discussion.html  intListMain.cpp  intListTest.cpp  testNode.cpp
final/: CMakeLists.txt  CaseModifier.cpp  CaseModifier.h  CharInput.hpp  Final.hpp  final.cpp  finalexam.cpp
midterm/: CMakeLists.txt  midterm.cpp
notes/: chapter09.lyx
notes/Lecture1/practiceExercises/: spc9-1.cpp  spc9-10.cpp  spc9-12.cpp  spc9-2.cpp
notes/Lecture2/: CMakeLists.txt  Lecture2.ppt  Pr10-13v2.cpp  Pr10-9.cpp
notes/Lecture2/practiceExercises/: spc10-10.cpp  spc10-12.cpp  spc10-13.cpp  spc10-14.cpp  spc10-16.cpp  spc10-8.cpp  spc10-9.cpp
notes/Lecture3/practiceExercises/: spc11-10.cpp  spc11-12.cpp  spc11-13.cpp  spc11-6.cpp
notes/Lecture4/practiceExercises/spc13-1/: spc13-1.cpp
notes/Lecture4/practiceExercises/spc13-10/: NumberArray.cpp  NumberArray.h  spc13-10.cpp
notes/Lecture4/practiceExercises/spc13-19/: spc13-19.cpp
notes/Lecture4/practiceExercises/spc13-4/: spc13-4.cpp
notes/Lecture4/practiceExercises/spc13-8/: spc13-8.cpp
notes/Lecture5/practiceExercises/spc14-1/: spc14-1.cpp
notes/Lecture5/practiceExercises/spc14-11/: FeetInches.h  spc14-11.cpp
notes/Lecture5/practiceExercises/spc14-3/: spc14-3.cpp
notes/Lecture5/practiceExercises/spc14-4/: NumDays.cpp  NumDays.h  spc14-4.cpp
notes/Lecture5/practiceExercises/spc14-8/: spc14-8.cpp
notes/Lecture5/practiceExercises/spc14-9/: FeetInches.cpp  FeetInches.h  spc14-9.cpp
notes/examples/chapter09/: CMakeLists.txt  addressOfOperator.cpp  arrayElementAddresses.cpp  arrayNameAsPointer.cpp  dynamicMemAlloc.cpp  illegalPointerInits.cpp  indirectionOperator.cpp  legalPointerInits.cpp  pointerComparison.cpp  pointerFunctionConstParam.cpp  pointerFunctionParamArrayAddress.cpp  pointerFunctionParamComplex.cpp  pointerFunctionParamSimple.cpp  pointerIncrementDecrement.cpp  pointerInitialization.cpp  pointerMultiVars.cpp  pointerSubscripts.cpp  processArrayUsingPointerNotation.cpp  storePrintAddressesWithPointers.cpp
notes/examples/chapter10/: CMakeLists.txt  practiceExercise2.cpp  practiceExercise3.cpp  practiceExercise4.cpp
notes/examples/chapter14/: Budget.cpp  Budget.h  CMakeLists.txt  Rectangle.cpp  Rectangle.h  Tree.h  budgetStaticMemberFunctionProg.cpp  treeStaticMemberFunctionProg.cpp
notes/examples/chapter15/: BaseClasses.h  CMakeLists.txt  CurvedActivity.h  FinalExamV1.cpp  FinalExamV1.h  FinalExamV2.cpp  FinalExamV2.h  GradedActivityV1.cpp  GradedActivityV1.h  GradedActivityV2.cpp  GradedActivityV2.h  GradedActivityV3.cpp  GradedActivityV3.h  PassFailActivityV1.cpp  PassFailActivityV1.h  PassFailExamV1.cpp  PassFailExamV1.h  finalExamTestV1.cpp  finalExamTestV2.cpp  gradedActivityTestV1.cpp  gradedActivityTestV2.cpp  multipleInheritance.cpp  testCurvedActivityV1.cpp  testPassFailExamV1.cpp
notes/supplementaryLecture4/supplementaryLecture4Code/ClassClock/: clockType.h  clockTypeImp.cpp  testClockClass.cpp
notes/supplementaryLecture4/supplementaryLecture4Code/four/: Rectangle_imp.txt  main.txt
notes/supplementaryLecture4/supplementaryLecture4Code/onYourOwn/: Square.h
notes/supplementaryLecture4/supplementaryLecture4Code/onYourOwnSolution/: Circle.h  CircleImp.cpp  SquareImp.cpp  Triangle.h  TriangleImp.cpp  main.cpp
notes/supplementaryLecture4/supplementaryLecture4Code/one/: generateAddition.txt  generateAddition_h.txt  generateAddition_imp.txt  main.txt
notes/supplementaryLecture4/supplementaryLecture4Code/six/: InventoryItemImp.txt  InventoryItem_h.txt
notes/supplementaryLecture4/supplementaryLecture4Code/three/: Circle_imp.txt  main.txt
notes/supplementaryLecture4/supplementaryLecture4Code/two/: Circle_h.txt  Circle_imp.txt  main.txt
notes/supplementaryLecture5_Part_1/supplementaryLecture5_Part_1_Source Code/: rectangleTypeOprOvrFriendrFunc.h  rectangleTypeOprOvrMemberFunc.h
notes/supplementaryLecture5_Part_1/supplementaryLecture5_Part_1_Source Code/ComplexNumber/: complexType.cpp  complexType.h  testComplexNumber.cpp
notes/supplementaryLecture5_Part_1/supplementaryLecture5_Part_1_Source Code/Example13-1_thisPointer/: rectangleType.h  rectangleTypeImp.cpp  thisPointerIllusTestProg.cpp
notes/supplementaryLecture5_Part_1/supplementaryLecture5_Part_1_Source Code/Example13-2_friendFunction/: Ch13_FriendFunction.cpp  rectangleType.h  rectangleTypeImp.cpp
notes/supplementaryLecture5_Part_1/supplementaryLecture5_Part_1_Source Code/Example13-3_binaryOpr_AsMembers/: rectangleType.h  rectangleTypeImp.cpp  testOpOverLoadClass.cpp
notes/supplementaryLecture5_Part_1/supplementaryLecture5_Part_1_Source Code/Example13-4_binaryOprAsFriend/: rectangleType.h  rectangleTypeImp.cpp  testOpOverLoadClass.cpp
(+28 files in other folders)
