cmake_minimum_required(VERSION 3.5)
project(cpp_lecture2)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_COMPILER /usr/bin/g++)

add_executable(pr10-01 Pr10-1.cpp)
add_executable(pr10-02 Pr10-2.cpp)
add_executable(pr10-05 Pr10-5.cpp)
add_executable(pr10-06 Pr10-6.cpp)
add_executable(pr10-09 Pr10-9.cpp)
add_executable(pr10-10 Pr10-10.cpp)
add_executable(pr10-11 Pr10-11.cpp)
add_executable(pr10-12 Pr10-12.cpp)
add_executable(pr10-13 Pr10-13.cpp)
add_executable(pr10-13v2 Pr10-13v2.cpp)
add_executable(pr10-14 Pr10-14.cpp)
add_executable(pr10-15 Pr10-15.cpp)
add_executable(pr10-16 Pr10-16.cpp)
add_executable(pr10-018 Pr10-18.cpp)